--- a/App.config
+++ b/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+
+	<connectionStrings>
+		<add name="MyConnectionString" connectionString="Data Source=localhost;Initial Catalog=dboTransportation;Integrated Security=True;" />
+	</connectionStrings>
+
 </configuration>
+
